GCA-100 fix update trainee trainings
